WAL: Context compaction checkpoint — RUN 140 complete
* 173 RUNs delivered since session start.
* 727 cumulative tests, 0 failures.
* GPU ONNX inference VERIFIED at 15.40x speedup.
* Mission status snapshot for memory compaction.